# gmock-boilerplate

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: CodeCoverage.cmake
include/: Shape.h  ShapeCalculator.h  Square.h  StdioMockSample.h
src/: StdioMockSample.cpp  main.cpp
test/: CMakeLists.txt  MockStdio.cpp  ShapeCalculatorTest.cpp  SquareTest.cpp  StdioMockSampleTest.cpp
test/ext/gtest/: CMakeLists.txt
test/include/: MockShape.h  MockStdio.h
