SET(EXT_PROJECTS_DIR ext)
ADD_SUBDIRECTORY(${EXT_PROJECTS_DIR}/gtest)
ENABLE_TESTING()

SET(PROJECT_TEST_NAME ${PROJECT_NAME}_test)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS})

FILE(GLOB_RECURSE TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*)

ADD_EXECUTABLE(${PROJECT_TEST_NAME} ${TEST_SRC_FILES} ${CPP_SRCS})
ADD_DEPENDENCIES(${PROJECT_TEST_NAME} googletest)

TARGET_LINK_LIBRARIES(${PROJECT_TEST_NAME}
        ${GTEST_LIBS_DIR}/libgtest.a
        ${GTEST_LIBS_DIR}/libgtest_main.a
        ${GMOCK_LIBS_DIR}/libgmock.a
        )

TARGET_LINK_LIBRARIES(${PROJECT_TEST_NAME} ${CMAKE_THREAD_LIBS_INIT} gcov)

ADD_TEST(test ${PROJECT_TEST_NAME})

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
INCLUDE(CodeCoverage)
SETUP_TARGET_FOR_COVERAGE(${PROJECT_NAME}_coverage ${PROJECT_TEST_NAME} coverage -j;8)
SETUP_TARGET_FOR_COVERAGE_COBERTURA(${PROJECT_NAME}_cobertura ${PROJECT_TEST_NAME} cobertura -j;8)